# hello_camera

./: .gitignore
main/: CMakeLists.txt
main/inc/: camera.h  chip_info.h  proj_macros.h  video_sender.h
main/src/: camera.cpp  chip_info.cpp  main.cpp
